//
//
// meta_node.proto
// Copyright (C) 2022 db3.network Author imotai <codego.me@gmail.com>
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//    http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
//


syntax = "proto3";

import "db3_base.proto";

package db3_meta_proto;

message CreateDBRequest {
    string db = 1;
}

message CreateDBResponse {}

message CreateTableRequest {
    db3_base_proto.DB3TableDesc table_desc = 1;
}
message CreateTableResponse {}

// The db3 meta server definition.
service Meta {
    // method for adding a new table
    rpc CreateTable (CreateTableRequest) returns (CreateTableResponse) {}
    rpc CreateDB(CreateDBRequest) returns(CreateDBResponse){}
}
